--- a/front/public/index.html
+++ b/front/public/index.html
@@ -31,11 +31,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <!-- Fa Icone List  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
 
     <!-- MUI cdn  -->
-    <script src="https://unpkg.com/@mui/material@latest/umd/material-ui.development.js"></script>
+    <!-- <script src="https://unpkg.com/@mui/material@latest/umd/material-ui.development.js"></script> -->
 
 
 
